Fix swappable section bugs